[package]
name = "redjubjub-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
redjubjub = "0.7"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
tiny-bip39 = "=2.0.0"
bip32 = "0.5.3"

[dev-dependencies]
rustfmt = "0.10.0"
clippy = "0.0.302"

